--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
+<h1>About BookmarkThis!</h1>
+<p>BookmarkThis! is a web application that allow users to save their favorite links they found on the Web!</p>
+<p>Since there are so much content in today's Web, with BookmarkThis! you can have your digital content organized in a fashion manner, as well as discovering new awesome links out there!</p>
