--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hello <%= @resource.name %>!</p>
 
 <p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
@@ -6,3 +6,6 @@
 
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
+
+<p>Best wishes,</p>
+<p>Your friend <%= link_to 'bntz.io', "https://twitter.com/@bntzio" %></p>
