--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,10 +1,12 @@
-<h1 align='center'>All Bookmarks</h1>
-<hr>
-<% @topics.each do |topic| %>
-  <%= link_to topic.title, topic_path(topic.id), class: 'btn btn-primary' %></br>
-  <% @bookmarks.each do |bookmark| %>
-    <%= link_to bookmark.url, "http://#{bookmark.url}", class: 'btn btn-warning' %>
-  <% end %>
-</br>
-</br>
-<% end %>
+<h2>All Bookmarks</h2>
+
+<div class="row">
+  <div class="col-md-8">
+    <% @topics.each do |topic| %>
+      <h4><%= link_to "##{topic.title}", topic_path(topic.id) %></br></h4>
+      <% topic.bookmarks.each do |bookmark| %>
+        <%= link_to "#{bookmark.url}", "http://#{bookmark.url}", target: "_blank" %></br>
+      <% end %>
+    <% end %>
+  </div>
+</div>
