--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
         <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
       </div>
       <div class="form-group">
-        <%= f.submit "Sign up", class: 'btn btn-success' %>
+        <%= f.submit "Sign up", class: 'btn btn-primary' %>
       </div>
       <div class="form-group">
         <%= render "devise/shared/links" %>
