--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <br/>
 <div class="jumbotron">
-  <h1 id='index-title'>Welcome to <span id='bookmarkthis-index-title'>BookmarkThis!</span></h1>
+  <h1 id='page-title'>Welcome to <span id='bookmarkthis-index-title'>BookmarkThis!</span></h1>
   <p id='index-description'>BookmarkThis! is a web application that allow users to save and share their favorite links they found on the Web!</p>
   <p>
       <%= link_to "Sign in", new_user_session_path, class: 'btn btn-primary' %> or
