--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit "Resend confirmation instructions", class: 'btn btn-success' %>
+    <%= f.submit "Resend confirmation instructions", class: 'btn btn-primary' %>
   </div>
   <div class="form-group">
     <%= render "devise/shared/links" %>
