--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit "Send me reset password instructions", class: 'btn btn-success' %>
+    <%= f.submit "Send me reset password instructions", class: 'btn btn-primary' %>
   </div>
 
   <div class="form-group">
