--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <li><%= link_to "About", welcome_about_path %></li>
       <div class="pull-right user-info">
         <% if current_user %>
-          Hello <%= current_user.name %>! <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+          <span id="login-message">Hello <%= link_to "#{current_user.email}", edit_user_registration_path %>!</span> <%= link_to "Logout", destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to "Sign In", new_user_session_path %> or
           <%= link_to "Sign Up", new_user_registration_path %>
