--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,15 @@
-<h2><%= @topic.title %></h2>
+<h2 id="page-title"><%= @topic.title %></h2>
 
-<% @topic.bookmarks.each do |topic| %>
-  <%= link_to topic.url, "http://#{topic.url}", target: "_blank" %></br>
-<% end %>
+<div class="row">
+  <div class="col-md-8">
+    <% @topic.bookmarks.each do |topic| %>
+      <%= link_to topic.url, "http://#{topic.url}", target: "_blank" %></br>
+    <% end %>
+  </div>
+  <div class="col-md-4">
+    
+    <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-default' %>
+    <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %>
+    <%= link_to "Go Back", topics_path, class: 'btn btn-link' %>
+  </div>
+</div>
