--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,8 +1,8 @@
-<h1>Edit <%= @topic.title %></h1>
+<h1>Edit <%= @bookmark.url %></h1>
  
  <div class="row">
    <div class="col-md-4">
-     <p>Guidelines for topics</p>
+     <p>Guidelines for bookmarks</p>
      <ul>
        <li>Make sure it rhymes.</li>
        <li>Don't use the letter "A".</li>
@@ -10,13 +10,13 @@
      </ul>
    </div>
    <div class="col-md-8">
-     <%= form_for @topic do |t| %>
+     <%= form_for [@topic, @bookmark] do |b| %>
        <div class="form-group">
-         <%= t.label :title %>
-         <%= t.text_field :title, class: 'form-control', placeholder: "Enter topic title" %>
+         <%= b.label :url %>
+         <%= b.text_field :url, class: 'form-control', placeholder: "Enter bookmark url" %>
        </div>
        <div class="form-group">
-        <%= t.submit "Save", class: 'btn btn-primary' %>
+        <%= b.submit "Save", class: 'btn btn-primary' %>
         <%= link_to "Rewind", :back, class: 'btn btn-link' %>
        </div>
      <% end %>
