--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,10 +1,13 @@
-<span class="topic-title"><%= @topic.title %></span><%= link_to "  edit", edit_topic_path %> | <%= link_to "destroy", @topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %>
+<span class="topic-title"><%= @topic.title %></span>
+  <%= link_to "  edit", edit_topic_path %> | <%= link_to "destroy", @topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %>
 
 <div class="row">
   <div class="col-md-8">
     <% if @topic.bookmarks.count >= 1 %>
       <% @topic.bookmarks.each do |my_bookmark| %>
-        <%= link_to my_bookmark.url, "http://#{my_bookmark.url}", target: "_blank" %><%= " bookmark id: #{my_bookmark.id} " %><%= link_to "edit", edit_topic_bookmark_path(@topic, my_bookmark) %> | <%= link_to "destroy", [@topic, my_bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' } %></br>
+        <%= link_to my_bookmark.url, "http://#{my_bookmark.url}", target: "_blank" %>
+        <%= " bookmark id: #{my_bookmark.id} " %>
+        <%= link_to "edit", edit_topic_bookmark_path(@topic, my_bookmark) %> | <%= link_to "destroy", [@topic, my_bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' } %></br>
       <% end %>
     <% else %>
       <p>No bookmarks! :(</p>
