--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -10,7 +10,7 @@
      </ul>
    </div>
    <div class="col-md-8">
-     <%= form_for [@topic, @bookmark] do |b| %>
+     <%= form_for [@bookmark] do |b| %>
        <div class="form-group">
          <%= b.label :url %>
          <%= b.text_field :url, class: 'form-control', placeholder: "Enter bookmark url" %>
