--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,10 +1,10 @@
 <% if policy(Like.new).create? %>
   <% if like = current_user.liked(bookmark) %>
-    <%= link_to [@topic, bookmark, like], method: :delete do %>
+    <%= link_to [bookmark, like], method: :delete do %>
       <i class="glyphicon glyphicon-star"> </i>&nbsp;
     <% end %>
   <% else %>
-    <%= link_to [@topic, bookmark, Like.new], method: :post do %>
+    <%= link_to [bookmark, Like.new], method: :post do %>
       <i class="glyphicon glyphicon-star-empty"> </i>&nbsp;
     <% end %>
   <% end %>
