--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,14 +3,25 @@
 <div class="row">
   <div class="col-md-8">
     <% @topics.each do |topic| %>
-      <h4><%= link_to "##{topic.title}", topic_path(topic.id) %></br></h4>
+      <span class="topics"><%= link_to "##{topic.title}", topic_path(topic.id) %></span>
+      <% if policy(Topic.new).update? %>
+        <i>&nbsp;<%= link_to "edit", edit_topic_path(topic) %></i> / <i><%= link_to "destroy", topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %></i>
+      <% end %>
+    </br></br>
       <% topic.bookmarks.each do |bookmark| %>
         <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
-        <%= link_to "#{bookmark.url}", "http://#{bookmark.url}", target: "_blank" %></br></br>
+        <%= link_to "#{bookmark.url}", "http://#{bookmark.url}", target: "_blank" %>
+        <% if policy(Topic.new).update? %>
+          &nbsp;<i><%= link_to "edit", edit_bookmark_path(bookmark) %></i> /
+          <i><%= link_to "destroy", [bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' } %></i>
+        <% end %>
+      </br></br>
       <% end %>
     <% end %>
   </div>
-  <div class="col-md-4">
-    <%= link_to "New Topic", new_topic_path, class: 'btn btn-primary' %>
-  </div>
+  <% if policy(Topic.new).create? %>
+    <div class="col-md-4">
+      <%= link_to "New Topic", new_topic_path, class: 'btn btn-primary' %>
+    </div>
+  <% end %>
 </div>
