--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,13 +1,18 @@
 <span class="topic-title"><%= @topic.title %></span>
-  <%= link_to "  edit", edit_topic_path %> | <%= link_to "destroy", @topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %>
+  <% if policy(Topic.new).update? %>
+    <i>&nbsp;<%= link_to "  edit", edit_topic_path %></i> / <i><%= link_to "destroy", @topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %></i>
+  <% end %>
 
 <div class="row">
   <div class="col-md-8">
     <% if @topic.bookmarks.count >= 1 %>
       <% @topic.bookmarks.each do |my_bookmark| %>
+        <%= render partial: 'likes/like', locals: { bookmark: my_bookmark } %>
         <%= link_to my_bookmark.url, "http://#{my_bookmark.url}", target: "_blank" %>
-        <%= " bookmark id: #{my_bookmark.id} " %>
-        <%= link_to "edit", edit_topic_bookmark_path(@topic, my_bookmark) %> | <%= link_to "destroy", [@topic, my_bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' } %></br>
+        <% if policy(Topic.new).update? %>
+          &nbsp;<i><%= link_to "edit", edit_bookmark_path(my_bookmark) %></i> / <i><%= link_to "destroy", my_bookmark, method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' } %></i>
+        <% end %>
+      </br>
       <% end %>
     <% else %>
       <p>No bookmarks! :(</p>
