Added instructions to index, about and confirmation views

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -9,7 +9,11 @@
 
 <p><%= link_to 'Confirm your account', confirmation_url(@resource, confirmation_token: @token) %></p>
 
-<p>We wish you the best, we hope you enjoy BookmarkThis! and <b>regain control of your digital life!</b></p>
+<p>
+  After confirming your account, you can start to save bookmarks, just send an email to: <b>bookmark-this@appfc266c436eb04ebaae05a3f3f8ad7e49.mailgun.org</b> and write the <i>topic</i> for your bookmark in the <i>subject</i>, and the <i>URL</i> in the <i>body</i>, hit send and that's it! Make sure to save the bookmark-this email address and add it to your contacts!
+<p>
+
+<p>That's all you need to know for now, we wish you the best, we hope you enjoy BookmarkThis! and <b>regain control of your digital life!</b></p>
 
 <p><i>Sincerely,</i></p>
 <p>Your friend <%= link_to 'bntz.io', "https://twitter.com/@bntzio" %></p>
