--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,12 @@
 <h1 id="page-title">About BookmarkThis!</h1>
 <p>BookmarkThis! is a web application that allow users to save their favorite links they found on the Web!</p>
 <p>Since there are so much content in today's Web, with BookmarkThis! you can have your digital content organized in a fashion manner, as well as discovering new awesome links out there!</p>
+
+<h3 id="page-title">How to use?</h3>
+<p>Simply shoot an email at <b>bookmark-this@appfc266c436eb04ebaae05a3f3f8ad7e49.mailgun.org</b> with the bookmark topic in the subject line, and in the body write the URL you'd like to bookmark, click send and that's it!</p>
+<p>Just remember that you need to send the email from the same address as your BookmarkThis! account, as all your sent bookmarks will be saved in there.</p>
+<p>If you send a bookmark from an email address other than the one registered on BookmarkThis! A new account will be created for you based on the email address you sent the email from, and you'll need to use the <i>'Forgot your password'</i> option in order to create your new password.</p>
+<p>Oh, and one more thing, have fun and discover amazing links!</p>
+
+<h3 id="page-title">Feedback</h3>
+<p>If you got any questions or want to give me some feedback tweet me at <%= link_to '@bntzio', "https://twitter.com/@bntzio", target: '_blank' %></p>
