--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,7 +37,14 @@
     <p>Mark your best articles with a star, and order those by keeping them in your 'starred' section!</p>
   </div>
 </div>
- 
+ <div class="row">
+  <div align="center" class="col-md-12">
+    <h2><span id='index-keywords'>How to use?</span> shoot an email!</h2>
+    <p>Just shoot an email to: <b>bookmark-this@appfc266c436eb04ebaae05a3f3f8ad7e49.mailgun.org</b>
+    <p>The email <i>subject</i> should contain the <i>topic</i>, while in the <i>body</i> you can directly write a <i>link</i>, hit send and voilà!</p>
+  </div>
+</div>
+
 </br>
  
 <div class="row">
