--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,14 +4,14 @@
   <div class="col-md-8">
     <% @topics.each do |topic| %>
       <span class="topics"><%= link_to "##{topic.title}", topic_path(topic.id) %></span>
-      <% if policy(Topic.new).update? %>
+      <% if policy(Topic.new).edit? %>
         <i>&nbsp;<%= link_to "edit", edit_topic_path(topic) %></i> / <i><%= link_to "destroy", topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %></i>
       <% end %>
     </br></br>
       <% topic.bookmarks.each do |bookmark| %>
         <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
         <%= link_to "#{bookmark.url}", "http://#{bookmark.url}", target: "_blank" %>
-        <% if policy(Topic.new).update? %>
+        <% if policy(bookmark).update? %>
           &nbsp;<i><%= link_to "edit", edit_bookmark_path(bookmark) %></i> /
           <i><%= link_to "destroy", [bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' } %></i>
         <% end %>
