--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,27 +1,28 @@
-<h2 id="page-title">All Bookmarks</h2>
+<h2 id="page-title">Recent Bookmarks</h2>
+<% if policy(Topic.new).create? %>
+ <%= link_to "New Topic", new_topic_path, class: 'btn btn-primary' %>
+<% end %>
+
+<hr>
 
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-12">
     <% @topics.each do |topic| %>
-      <span class="topics"><%= link_to "##{topic.title}", topic_path(topic.id) %></span>
-      <% if policy(Topic.new).edit? %>
-        <i>&nbsp;<%= link_to "edit", edit_topic_path(topic) %></i> / <i><%= link_to "destroy", topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %></i>
-      <% end %>
-    </br></br>
       <% topic.bookmarks.each do |bookmark| %>
-        <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
-        <%= link_to "#{bookmark.url}", "http://#{bookmark.url}", target: "_blank" %>
-        <% if policy(bookmark).update? %>
-          &nbsp;<i><%= link_to "edit", edit_bookmark_path(bookmark) %></i> /
-          <i><%= link_to "destroy", [bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' } %></i>
-        <% end %>
-      </br></br>
+          <div class="thumbnail-index">
+            <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
+            <b><%= display("#{bookmark.url}").title %></br></b>
+            <%= link_to "#{bookmark.url}", "#{bookmark.url}", target: "_blank" %>
+            <% if policy(bookmark).update? %>
+            &nbsp;<i><%= link_to "edit", edit_bookmark_path(bookmark), class: 'edit-destroy-link' %></i> /
+          <i><%= link_to "destroy", [bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' }, class: 'edit-destroy-link' %></i></br>
+            <% end %>
+            <%= image_tag(display("#{bookmark.url}").thumbnail_url, size: "240").html_safe %>
+            <hr>
+            <%= link_to "##{bookmark.topic.title}", topic_path(topic.id) %>
+        </div>
       <% end %>
     <% end %>
   </div>
-  <% if policy(Topic.new).create? %>
-    <div class="col-md-4">
-      <%= link_to "New Topic", new_topic_path, class: 'btn btn-primary' %>
-    </div>
-  <% end %>
+  
 </div>
