--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -23,18 +23,36 @@
      <div class="tab-content">
        <div class="tab-pane active" id="bookmarks">
          <% @user_bookmarks.each do |bookmark| %>
-          <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
-          <%= link_to "#{bookmark.url}", "http://#{bookmark.url}", target: "_blank" %>
-          <% if policy(bookmark).update? %>
-          &nbsp;<i><%= link_to "edit", edit_bookmark_path(bookmark) %></i> /
-          <i><%= link_to "destroy", [bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' } %></i></br>
-        <% end %>
+          </br>
+          <div class="thumbnail">
+            <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
+            <b><%= display("#{bookmark.url}").title %></br></b>
+            <%= link_to "#{bookmark.url}", "#{bookmark.url}", target: "_blank" %>
+            <% if policy(bookmark).update? %>
+            &nbsp;<i><%= link_to "edit", edit_bookmark_path(bookmark), class: 'edit-destroy-link' %></i> /
+          <i><%= link_to "destroy", [bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' }, class: 'edit-destroy-link' %></i></br>
+            <% end %>
+            <%= image_tag(display("#{bookmark.url}").thumbnail_url, size: "240").html_safe %>
+            <hr>
+            <%= link_to "##{bookmark.topic.title}", bookmark.topic(:topic_id) %>
+        </div>
          <% end %>
        </div>
        <div class="tab-pane" id="likes">
          <% @liked_bookmarks.each do |like| %>
+       </br>
+          <div class="thumbnail">
           <%= render partial: 'likes/like', locals: { bookmark: like.bookmark } %>
-          <%= link_to "#{like.bookmark.url}", "http://#{like.bookmark.url}", target: "_blank" %></br>
+          <b><%= display("#{like.bookmark.url}").title %></br></b>
+            <%= link_to "#{like.bookmark.url}", "#{like.bookmark.url}", target: "_blank" %>
+            <% if policy(Topic).update? %>
+            &nbsp;<i><%= link_to "edit", edit_bookmark_path(like.bookmark), class: 'edit-destroy-link' %></i> /
+          <i><%= link_to "destroy", [like.bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' }, class: 'edit-destroy-link' %></i></br>
+            <% end %>
+            <%= image_tag(display("#{like.bookmark.url}").thumbnail_url, size: "240").html_safe %>
+            <hr>
+            <%= link_to "##{like.bookmark.topic.title}", like.bookmark.topic(:topic_id) %>
+        </div>
          <% end %>
        </div>
      </div>
