Installed and added pagination to topics view, separates bookmarks from topics on their own index views, sets limit to only show the last 25 bookmarks on their index view, includes placeholders for non-displayed bookmarks, and refactored code for topics and bookmarks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
   <div class="container">
     <ul class="nav nav-pills">
       <% if current_user %>
-        <li><%= link_to "Bookmarks", topics_path %></li>
+        <li><%= link_to "Bookmarks", bookmarks_path %></li>
       <% else %>
         <li><%= link_to "BookmarkThis!", welcome_index_path %></li>
       <% end %>
+      <li><%= link_to "Topics", topics_path %></li>
       <li><%= link_to "About", welcome_about_path %></li>
       <div class="pull-right user-info">
         <% if current_user %>
