--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,13 +26,21 @@
           </br>
           <div class="thumbnail">
             <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
-            <b><%= display("#{bookmark.url}").title %></br></b>
+            <% if display("#{bookmark.url}").title %>
+              <b><%= display("#{bookmark.url}").title %></b></br>
+            <% else %>
+              <b class="no-title-preview">Bookmark title preview is not available</b></br>
+            <% end %>
             <%= link_to "#{bookmark.url}", "#{bookmark.url}", target: "_blank" %>
             <% if policy(bookmark).update? %>
-            &nbsp;<i><%= link_to "edit", edit_bookmark_path(bookmark), class: 'edit-destroy-link' %></i> /
-          <i><%= link_to "destroy", [bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' }, class: 'edit-destroy-link' %></i></br>
+              &nbsp;<i><%= link_to "edit", edit_bookmark_path(bookmark), class: 'edit-destroy-link' %></i> /
+              <i><%= link_to "destroy", [bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' }, class: 'edit-destroy-link' %></i></br>
             <% end %>
-            <%= image_tag(display("#{bookmark.url}").thumbnail_url, size: "240").html_safe %>
+            <% if display("#{bookmark.url}").thumbnail_url %>
+              <%= image_tag(display("#{bookmark.url}").thumbnail_url, size: "240").html_safe %>
+            <% else %>
+              <%= image_tag("no-preview.png", size: "240", :alt => "No Preview Available") %>
+            <% end %>
             <hr>
             <%= link_to "##{bookmark.topic.title}", bookmark.topic(:topic_id) %>
         </div>
@@ -42,18 +50,26 @@
          <% @liked_bookmarks.each do |like| %>
        </br>
           <div class="thumbnail">
-          <%= render partial: 'likes/like', locals: { bookmark: like.bookmark } %>
-          <b><%= display("#{like.bookmark.url}").title %></br></b>
+            <%= render partial: 'likes/like', locals: { bookmark: like.bookmark } %>
+            <% if display("#{like.bookmark.url}").title %>
+              <b><%= display("#{like.bookmark.url}").title %></b></br>
+            <% else %>
+              <b class="no-title-preview">Bookmark title preview is not available</b></br>
+            <% end %>
             <%= link_to "#{like.bookmark.url}", "#{like.bookmark.url}", target: "_blank" %>
             <% if policy(Topic).update? %>
-            &nbsp;<i><%= link_to "edit", edit_bookmark_path(like.bookmark), class: 'edit-destroy-link' %></i> /
-          <i><%= link_to "destroy", [like.bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' }, class: 'edit-destroy-link' %></i></br>
+              &nbsp;<i><%= link_to "edit", edit_bookmark_path(like.bookmark), class: 'edit-destroy-link' %></i> /
+              <i><%= link_to "destroy", [like.bookmark], method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' }, class: 'edit-destroy-link' %></i></br>
             <% end %>
-            <%= image_tag(display("#{like.bookmark.url}").thumbnail_url, size: "240").html_safe %>
+            <% if display("#{like.bookmark.url}").thumbnail_url %>
+              <%= image_tag(display("#{like.bookmark.url}").thumbnail_url, size: "240").html_safe %>
+            <% else %>
+              <%= image_tag("no-preview.png", size: "240", :alt => "No Preview Available") %>
+            <% end %>
             <hr>
             <%= link_to "##{like.bookmark.topic.title}", like.bookmark.topic(:topic_id) %>
-        </div>
-         <% end %>
+            </div>
+          <% end %>
        </div>
      </div>
    </div>
