Added validation to topics, updated guidelines for topics and fixed path of a link

--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -4,9 +4,9 @@
    <div class="col-md-4">
      <p>Guidelines for topics</p>
      <ul>
-       <li>Make sure it rhymes.</li>
-       <li>Don't use the letter "A".</li>
-       <li>The incessant use of hashtags will get you banned.</li>
+       <li>Topics must to be 4-32 characters long.</li>
+       <li>Topics can't contain special characters.</li>
+       <li>Feel free to use - or _ on your topic titles.</li>
      </ul>
    </div>
    <div class="col-md-8">
