--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -20,6 +20,6 @@
   </div>
   <div class="col-md-4">
     <%= link_to "Add a new Bookmark", new_topic_bookmark_path(@topic, @bookmark), class: 'btn btn-primary' %>
-    <%= link_to "Go Back", :back, class: 'btn btn-link' %>
+    <%= link_to "Go Back", topics_path, class: 'btn btn-link' %>
   </div>
 </div>
