--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,6 +2,7 @@
 
 <div class="row">
   <div class="col-md-8">
+    <h3>Change email or password</h3>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
       <div class="form-group">
@@ -32,6 +33,18 @@
         <%= f.submit "Update", class: 'btn btn-primary' %>
       </div>
     
+    <% end %>
+
+    <h3>Edit personal information</h3>
+    <%= form_for(current_user) do |f| %>
+      <div class="form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.submit "Update", class: 'btn btn-primary' %>
+      </div>
     <% end %>
 
     <h3>Cancel my account</h3>
