--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,20 @@
       <% else %>
         <li><%= link_to "BookmarkThis!", welcome_index_path %></li>
       <% end %>
-      <li><%= link_to "Topics", topics_path %></li>
+      <% if current_user %>
+        <li><%= link_to "Topics", topics_path %></li>
+        <li><%= link_to "Users", users_path %></li>
+      <% end %>
       <li><%= link_to "About", welcome_about_path %></li>
       <div class="pull-right user-info">
         <% if current_user %>
-          <span id="login-message">Hello <%= link_to "#{current_user.name}", edit_user_registration_path %>!</span> <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+          <span id="login-message">Hello <%= link_to (current_user.name || current_user.email), users_profile_path %>!</span>
+          <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
+            <span class="glyphicon glyphicon-user"></span>
+          <% end %>
+          <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm' do %>
+            <span class="glyphicon glyphicon-log-out"></span>
+          <% end %>
         <% else %>
           <%= link_to "Sign In", new_user_session_path %> or
           <%= link_to "Sign Up", new_user_registration_path %>
