Updated guidelines for bookmarks

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -4,9 +4,9 @@
    <div class="col-md-4">
      <p>Guidelines for bookmarks</p>
      <ul>
-       <li>Make sure it rhymes.</li>
-       <li>Don't use the letter "A".</li>
-       <li>The incessant use of hashtags will get you banned.</li>
+       <li>Don't include HTTP:// or HTTPS://</li>
+       <li>Include www.</li>
+       <li>Provide a real URL, please.</li>
      </ul>
    </div>
    <div class="col-md-8">
