--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -8,9 +8,9 @@
 <div class="row">
   <div class="col-md-12">
     <% @topics.each do |topic| %>
-    <b><%= link_to "##{topic.title}", topic_path(topic.id) %></b>
+    <b><%= link_to "##{topic.title}", topic_path(topic.friendly_id) %></b>
     <% if policy(Topic.new).edit? %>
-      <i>&nbsp;<%= link_to "  edit", edit_topic_path(topic.id) %></i> / <i><%= link_to "destroy", topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %></i>
+      <i>&nbsp;<%= link_to "  edit", edit_topic_path(topic.friendly_id) %></i> / <i><%= link_to "destroy", topic, method: :delete, data: { confirm: 'Are you sure you want to delete this topic? Deleting a topic will delete all associated bookmarks' } %></i>
     <% end %>
     </br>
       <% topic.bookmarks.each do |bookmark| %>
